Added basic typography files and some theme variables.

--- a/src/main.scss
+++ b/src/main.scss
@@ -9,7 +9,9 @@
 
 // 3. Base stuff
 @import
-'base/reset';
+'base/reset',
+'base/fonts',
+'base/typography';
 
 // 4. No Layout related folders at the moment
 
