--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 //This file will inherit all other non-compiled scss files into one executable file.
+//This configuration is meant to provide an over-arching style guide. While preventing itself from over-writing itself.
 
 // 1. Configuration and helpers
 @import
@@ -15,14 +16,8 @@
 
 // 4. No Layout related folders at the moment
 
-// 5. Components
-@import
-'components/Header/header';
+// 5. Component related styling will be tied to the component itself
 
-// 6. Page-specific styles
-@import
-'pages/Home/home';
+// 6. Page-specific styles will be tied to the page itself
 
-// 7. Themes
-@import
-'themes/default';
+// 7. No theme related folders at the moment
