Implemented flex in header to get basic styling

--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -10,3 +10,4 @@ $primary-highlight: rgb(255, 148, 142);
 //Common colors:
 $common-black: rgb(0, 0, 0);
 $common-white: rgb(255, 255, 255);
+$common-grey: rgb(200, 200, 200);
