--- a/src/components/NavigationModal/navigationModal.scss
+++ b/src/components/NavigationModal/navigationModal.scss
@@ -13,4 +13,13 @@
   padding: 0;
   background: $common-white;
   z-index: 1;
+
+  .exit {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    color: $primary-color;
+    font-weight: bold;
+    font-size: 1.5rem;
+  }
 }
