--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -15,6 +15,8 @@ button {
   border: none;
   background: inherit;
   cursor: pointer;
+  font-family: Times, sans-serif;
+  font-size: 1rem;
 
   &:hover {
     color: $primary-color;
