--- a/src/components/NavigationModal/navigationModal.scss
+++ b/src/components/NavigationModal/navigationModal.scss
@@ -13,6 +13,21 @@
   padding: 0;
   background: $common-white;
   z-index: 1;
+  font-family: Times, sans-serif;
+
+  li {
+    margin: 1rem;
+
+    a {
+      color: $common-black;
+      text-decoration: none;
+      border-bottom: $common-black 0.125rem solid;
+    }
+
+    button {
+      border-bottom: $common-black 0.125rem solid;
+    }
+  }
 
   .exit {
     position: absolute;
@@ -21,5 +36,12 @@
     color: $primary-color;
     font-weight: bold;
     font-size: 1.5rem;
+  }
+
+  .back {
+    margin-top: 1.5rem;
+    color: $primary-color;
+    font-weight: bold;
+    font-size: 1.2rem;
   }
 }
