--- a/src/components/DropDownNav/dropDownNav.scss
+++ b/src/components/DropDownNav/dropDownNav.scss
@@ -7,5 +7,16 @@
     background: $common-white;
     border: $common-grey solid 0.125rem;
     padding: 0.2rem;
+
+    li {
+      margin-top: 0.5rem;
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+      border-bottom: $common-grey solid 0.125rem;
+
+      &:last-child {
+        border-bottom: none;
+      }
+    }
   }
 }
