--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 2rem;
+  margin-bottom: 3rem;
 
   img {
     width: 19rem;
@@ -20,14 +21,21 @@
     padding-bottom: 1rem;
     width: 50%;
 
+    @media screen and (max-width: 650px) {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+
     ul {
       @media screen and (max-width: 650px) {
         display: none;
       }
-
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
+      @media screen and (min-width: 650px) {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+      }
 
       li {
 
@@ -47,9 +55,7 @@
         display: none;
       }
 
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
+      font-weight: bold;
     }
   }
 }
