--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,1 +1,27 @@
 @import "../../abstracts/variables";
+
+.home {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+
+  h2 {
+    font-size: 1.625rem;
+    font-weight: normal;
+    margin-bottom: 2rem;
+  }
+
+  @media screen and (max-width: 650px) {
+    width: 80%;
+  }
+
+  .coreValues {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 2rem ;
+  }
+}
