--- a/src/components/OfficerBoard/officerBoard.scss
+++ b/src/components/OfficerBoard/officerBoard.scss
@@ -3,4 +3,9 @@
 .officerBoard {
   background-color: $primary-highlight;
   padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 2rem;
 }
