--- a/src/components/OfficerCard/officerCard.scss
+++ b/src/components/OfficerCard/officerCard.scss
@@ -2,4 +2,24 @@
 
 .officerCard {
   background-color: $common-white;
+  margin: 1rem;
+  text-align: center;
+  padding: 0.75rem 1rem 0.5rem 1rem;
+
+  .image {
+    width: 14rem;
+    height: auto;
+    margin-bottom: 1rem;
+  }
+
+  .name {
+    color: $common-black;
+    font-size: 1.375rem;
+    margin-bottom: 1rem;
+  }
+
+  .position {
+    font-size: 0.82rem;
+    margin-bottom: 1rem;
+  }
 }
