--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -3,7 +3,6 @@
 .home {
   display: flex;
   flex-direction: column;
-  width: 50%;
   margin-left: auto;
   margin-right: auto;
 
@@ -15,6 +14,10 @@
 
   @media screen and (max-width: 650px) {
     width: 80%;
+  }
+
+  @media screen and (min-width: 650px) {
+    width: 70%;
   }
 
   .coreValues {
