--- a/src/pages/SignUp/signUp.module.scss
+++ b/src/pages/SignUp/signUp.module.scss
@@ -8,7 +8,32 @@
   justify-content: center;
   align-items: center;
 
-  section {
+  .messageSection {
+    width: 100vw;
+    height: 3rem;
+    position: absolute;
+    top: 0;
+    background-color: $common-grey;
+
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .message {
+      font-weight: bold;
+      font-size: 1.5rem;
+    }
+
+    button {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      font-weight: bold;
+    }
+  }
+
+  .signUpForm {
     background-color: $common-white;
     border-radius: 1rem;
     display: flex;
@@ -53,9 +78,7 @@
     letter-spacing: 0.15rem;
     border-radius: 0.25rem;
     padding: 0.5rem 0.75rem 0.5rem 0.75rem;
-    margin-top: 1rem;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 1rem auto 1rem auto;
     color: $common-white;
     text-decoration: none;
   }
